# ecg_ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  config.yaml  docker-bake.hcl  docker-compose.yml  main.py  pyproject.toml
ecgai/: __init__.py  config.py
ecgai/data/: __init__.py  dataset.py  preprocess.py
ecgai/models/: __init__.py  cnn.py
ecgai/training/: __init__.py  metrics.py  trainer.py
ecgai/utils/: __init__.py  checkpoint.py  distributed.py  helpers.py  logging.py
